add new website from server na

--- a/xem-phim-moi/nang-cong-chua-o-thung-lung-gio/index.html
+++ b/xem-phim-moi/nang-cong-chua-o-thung-lung-gio/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             15
+             16
             </dd>
             <br/>
            </dl>
@@ -1690,18 +1690,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/yeu-y-quan" title="Yêu Y Quán">
+          <a class="list-top-movie-link" href="/phim-moi/chuyen-du-lich-lang-man-cua-nguoi-vo-mua-3" title="Chuyến Du Lịch Lãng Mạn Của Người Vợ Mùa 3">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/yeu-y-quan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-du-lich-lang-man-cua-nguoi-vo-mua-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Yêu Y Quán
+             Chuyến Du Lịch Lãng Mạn Của Người Vợ Mùa 3
             </span>
             <span class="list-top-movie-item-en">
-             Monster Hospital
+             Chuyến Du Lịch Lãng Mạn Của Người Vợ Mùa 3
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1712,18 +1712,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/meo-quy-toc" title="Mèo Quý Tộc">
+          <a class="list-top-movie-link" href="/phim-moi/sat-pha-lang-2" title="Sát Phá Lang 2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/meo-quy-toc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sat-pha-lang-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mèo Quý Tộc
+             Sát Phá Lang 2
             </span>
             <span class="list-top-movie-item-en">
-             The Aristocats
+             SPL 2: A Time For Consequences
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1734,18 +1734,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/wallace-va-gromit-chiec-quan-rac-roi" title="Wallace và Gromit – Chiếc Quần Rắc Rối">
+          <a class="list-top-movie-link" href="/phim-moi/blow-the-man-down" title="Blow the Man Down">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/wallace-va-gromit-chiec-quan-rac-roi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/blow-the-man-down-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Wallace và Gromit – Chiếc Quần Rắc Rối
+             Blow the Man Down
             </span>
             <span class="list-top-movie-item-en">
-             The Wrong Trousers
+             Blow the Man Down
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nha-co-nam-nang-dau" title="Nhà Có Năm Nàng Dâu">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nha-co-nam-nang-dau-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Nhà Có Năm Nàng Dâu
+            </span>
+            <span class="list-top-movie-item-en">
+             5-toubun no Hanayome ∬, The Quintessential Quintuplets: Season 2
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1756,43 +1778,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ho-ly-trong-tay" title="Hồ Ly Trong Tay">
-           <span class="status">
-            Vietsub - HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ho-ly-trong-tay-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hồ Ly Trong Tay
-            </span>
-            <span class="list-top-movie-item-en">
-             Fall in Love with a Fox
-            </span>
-            <span class="list-top-movie-item-view">
-             7 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/massage-chat-luong-cao" title="Massage Chất Lượng Cao">
+          <a class="list-top-movie-link" href="/phim-moi/hay-goi-cho-saul-phan-5" title="Hãy gọi cho Saul (Phần 5)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/massage-chat-luong-cao-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hay-goi-cho-saul-phan-5-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Massage Chất Lượng Cao
+             Hãy gọi cho Saul (Phần 5)
             </span>
             <span class="list-top-movie-item-en">
-             질좋은마사지
+             Better Call Saul (Season 5)
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
