add new website from server na

--- a/xem-phim-moi/nang-cong-chua-o-thung-lung-gio/index.html
+++ b/xem-phim-moi/nang-cong-chua-o-thung-lung-gio/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             16
+             17
             </dd>
             <br/>
            </dl>
@@ -1611,28 +1611,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hung-long-phong-ba-phan-2" title="Hùng Long Phong Bá (Phần 2)">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hung-long-phong-ba-phan-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hùng Long Phong Bá (Phần 2)
-            </span>
-            <span class="list-top-movie-item-en">
-             Brothers For Life (Season 2)
-            </span>
-            <span class="list-top-movie-item-view">
-             54 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
            <span class="status">
             HD Vietsub
@@ -1645,6 +1623,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             </span>
             <span class="list-top-movie-item-en">
              Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-view">
+             54 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hung-long-phong-ba-phan-2" title="Hùng Long Phong Bá (Phần 2)">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hung-long-phong-ba-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hùng Long Phong Bá (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             Brothers For Life (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              54 lượt xem
@@ -1690,18 +1690,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chuyen-du-lich-lang-man-cua-nguoi-vo-mua-3" title="Chuyến Du Lịch Lãng Mạn Của Người Vợ Mùa 3">
+          <a class="list-top-movie-link" href="/phim-moi/ac-mong-dem-giang-sinh-2" title="Ác Mộng Đêm Giáng sinh 2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-du-lich-lang-man-cua-nguoi-vo-mua-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ac-mong-dem-giang-sinh-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chuyến Du Lịch Lãng Mạn Của Người Vợ Mùa 3
+             Ác Mộng Đêm Giáng sinh 2
             </span>
             <span class="list-top-movie-item-en">
-             Chuyến Du Lịch Lãng Mạn Của Người Vợ Mùa 3
+             Krampus 2
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1712,18 +1712,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sat-pha-lang-2" title="Sát Phá Lang 2">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-cuoc-phieu-luu-moi-cua-pippi-tat-dai" title="Những cuộc phiêu lưu mới của Pippi Tất dài">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sat-pha-lang-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-cuoc-phieu-luu-moi-cua-pippi-tat-dai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sát Phá Lang 2
+             Những cuộc phiêu lưu mới của Pippi Tất dài
             </span>
             <span class="list-top-movie-item-en">
-             SPL 2: A Time For Consequences
+             The New Adventures of Pippi Longstocking
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1734,40 +1734,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/blow-the-man-down" title="Blow the Man Down">
+          <a class="list-top-movie-link" href="/phim-moi/phi-vu-cuoi-cung" title="Phi Vụ Cuối Cùng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/blow-the-man-down-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phi-vu-cuoi-cung-2017-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Blow the Man Down
+             Phi Vụ Cuối Cùng
             </span>
             <span class="list-top-movie-item-en">
-             Blow the Man Down
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nha-co-nam-nang-dau" title="Nhà Có Năm Nàng Dâu">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nha-co-nam-nang-dau-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Nhà Có Năm Nàng Dâu
-            </span>
-            <span class="list-top-movie-item-en">
-             5-toubun no Hanayome ∬, The Quintessential Quintuplets: Season 2
+             The Adventurers
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1778,21 +1756,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hay-goi-cho-saul-phan-5" title="Hãy gọi cho Saul (Phần 5)">
+          <a class="list-top-movie-link" href="/phim-moi/ngu-hanh-bi-thuat" title="Ngũ Hành Bí Thuật">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hay-goi-cho-saul-phan-5-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngu-hanh-bi-thuat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hãy gọi cho Saul (Phần 5)
+             Ngũ Hành Bí Thuật
             </span>
             <span class="list-top-movie-item-en">
-             Better Call Saul (Season 5)
+             Five Elements
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ghost-in-the-shell-arise-border-3-ghost-tears" title="Ghost in the Shell Arise – Border 3: Ghost Tears">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ghost-in-the-shell-arise-border-3-ghost-tears-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Ghost in the Shell Arise – Border 3: Ghost Tears
+            </span>
+            <span class="list-top-movie-item-en">
+             Vỏ Bọc Ma ARISE border: 3 Nước Mắt Ma
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
